included new tests created

--- a/tests/index.html
+++ b/tests/index.html
@@ -11,5 +11,7 @@
         <script src="./deviceCapabilities.js"></script>
         <script src="./osTest.js"></script>
         <script src="./browserTest.js"></script>
+        <script src="./sensorAPITest.js"></script>
+        <script src="./constructorParameterTest.js"></script>
     </body>
 </html>
